--- a/InstaSham/InstaSham.csproj
+++ b/InstaSham/InstaSham.csproj
@@ -21,6 +21,11 @@
 
   <ItemGroup>
     <Folder Include="Models\" />
+    <Folder Include="Views\Comment\" />
+    <Folder Include="Views\DirectMessage\" />
+    <Folder Include="Views\User\" />
+    <Folder Include="Views\Story\" />
+    <Folder Include="Views\Post\" />
   </ItemGroup>
 
 </Project>
